--- a/views/search.ejs
+++ b/views/search.ejs
@@ -26,11 +26,11 @@
 					<% groupedResults[retailer].forEach(product => { %>
 						<li class="product-item">
 							<!-- Product Image -->
-							<img src="<%= product.productImg %>" alt="<%= product.productName %>" class="product-image">
+							<a href="/products/<%= product.categoryName %>/<%= product.productid %>"><img src="<%= product.productImg %>" alt="<%= product.productName %>" class="product-image"></a>
 							
 							<!-- Product Name -->
 							<div class="product-details">
-								<p class="product-name"><%= product.productName %></p>
+								<a class="product-name" href="/products/<%= product.categoryName %>/<%= product.productid %>"><%= product.productName %></a>
 								<p class="item-price">$<%= product.price.toFixed(2) %></p>
 								<p>(<%= product.averageRating.toFixed(1) %>)⭐</p>
 							</div>
