Update: Make objects prettier.

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,7 +6,7 @@
 	<%- include('./partials/nav.ejs') %>
 
 	<section class="contact">
-		<div class="content">
+		<div class="content-div">
 			<h2>Contact Us</h2>
 			<p>
 				We are a team of new people who are interested to help you find the BEST offers. 
@@ -14,58 +14,13 @@
 				Please feel free to visit us on office or contact with us on our e-mail or on phone.
 			</p>
 		</div>
-		<div class="container">
-			<div class="contactInfo">
-				
-				<div class="box">
-					<div class="icon">
-						<a href="https://goo.gl/maps/4u27q9cVGe6NgufS6" target="_blank">
-							<i class="fa fa-map-marker" aria-hidden="true"></i>
-
-							<div class="text">
-								<h3>Address</h3>
-								<p>Λεωφ. Βασιλίσσης Αμαλίας 133, Αθήνα 105 57</p>
-							</div>
-						</a>
-						
-					</div>
-					
-				</div>
-
-				<div class="box">
-					<div class="icon">
-						<a href="tel:+302102102102">
-							<i class="fa fa-phone" aria-hidden="true"></i>
-							<div class="text">
-								<h3>Phone</h3>
-								<p>+30 210-2102102</p>
-							</div>
-						</a>
-					</div>
-				</div>
-
-				<div class="box">
-					<div class="icon">
-						<a href="mailto:skrnodemail@gmail.com">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
-							<div class="text">
-								<h3>E-mail</h3>
-								<p>skrnodemail@gmail.com</p>
-							</div>
-						</a>
-					</div>
-				</div>
-			</div>
-
+		<div class="contact-container">
 
 			<form class="contactForm">
 				<input type="text" class="field" required="required" id="name" placeholder="Your Name">
-				<br><br>
 				<input type="mail" class="field" required="required" id="email" placeholder="Your Email">
-				<br><br>
 				<textarea class="field" placeholder="Message" required="required" id="message"></textarea>
 
-				<br><br><br>
 
 				<button type="button" class="submitButton" onclick="sendEmail()">Send Message</button>
 			</form>
