--- a/views/products.ejs
+++ b/views/products.ejs
@@ -17,9 +17,8 @@
 		try {
 			// const response = await fetch(window.location.href +'/products');
 			// const products = await response.json();
-			const products = <%- JSON.stringify(products).replace(/</g, '\\u003c') %>; // Embed data without HTML entities
+			const products = <%- JSON.stringify(products).replace(/</g, '\\u003c') %>;
 
-			// console.log(products);
 
 			const productsContainer = document.getElementById('index-product');
 
