--- a/views/style/cart.css
+++ b/views/style/cart.css
@@ -13,20 +13,21 @@ h3 {
 	text-transform: uppercase;
 }
 
+.cart-items
+{
+	margin-top: 50px;
+}
 
 .cart-item {
 	display: flex;
-	/* flex-direction: column; */
-	align-items: center; /* Centers the cart in the container */
-	flex-wrap: wrap; /* Wrap items for smaller screens */
 	align-items: center;
-	justify-content: center; /* Centers horizontally */
-	margin: 0 auto; /* Automatically centers horizontally */
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
 
-	padding: 20px;
 	gap: 20px;
 	margin-bottom: 15px;
-	/* margin-left: 20%; */
 	border-bottom: 1px solid #ddd;
 	padding-bottom: 10px;
 	max-width: 1000px;
@@ -39,7 +40,10 @@ h3 {
 }
 
 
-
+.product-name {
+	font-size: 1.2rem;
+	font-weight: bold;
+}
 
 .product-image {
 	width: 80px;
