--- a/views/style/contact.css
+++ b/views/style/contact.css
@@ -1,11 +1,18 @@
 .contact {
-	min-height: 80vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	color: rgb(255, 255, 255);
 	background-color: #29262633;
+
+	margin-top: 30px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+.contact p {
+	margin-top: 20px;
 }
 
 .contact .content {
@@ -22,27 +29,24 @@
 	font-weight: 300;
 }
 
-.container {
-	width: 100%;
+.contact-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-top: 30px;
-}
+	margin-top: 0px;
 
-.container .contactInfo {
-	width: 50%;
+	width: 30%;
 	display: flex;
 	flex-direction: column;
 }
 
-.container .contactInfo .box {
+.contact-container .box {
 	position: relative;
 	padding: 20px 0;
 	display: flex;
 }
 
-.container .contactInfo .box .icon {
+.contact-container .box .icon {
 	min-width: 60px;
 	height: 60px;
 	display: flex;
@@ -52,7 +56,7 @@
 }
 
 
-.container .contactInfo .box .text {
+.contact-container .box .text {
 	display: flex;
 	font-size: 16px;
 	margin-left: 20px;
@@ -60,7 +64,7 @@
 	font-weight: 300;
 }
 
-.container .contactInfo .box .text h3 {
+.contact-container .box .text h3 {
 	font-weight: 500;
 	color: white;
 }
@@ -71,7 +75,7 @@
 }
 
 
-.container .contactInfo .box .icon a {
+.contact-container .box .icon a {
 	display: flex;
 	color: #7c1919d7;
 	text-decoration: none;
@@ -81,7 +85,7 @@
 	
 }
 
-.container .contactInfo .box .icon a i {
+.container .box .icon a i {
 	margin-top: 30px;
 }
 
@@ -91,6 +95,10 @@
 }
 
 
+.contactForm {
+	margin-top: 40px;
+}
+
 .contactForm input {
 	height: 20px;
 	width: 100%;
@@ -98,10 +106,13 @@
 	border: 1px solid #ccc;
 	border-radius: 4px;
 	box-sizing: border-box;
-	/* margin-top: 6px;
-	margin-bottom: 16px; */
 	resize: vertical;
 	color: #686262;
+	margin-top: 5px;
+}
+
+.contactForm textarea {
+	margin-top: 5px;
 }
 
 textarea {
@@ -111,7 +122,7 @@ textarea {
 	border: 1px solid #ccc;
 	border-radius: 4px;
 	box-sizing: border-box;
-	margin-top: 6px;
+	/* margin-top: 6px; */
 	margin-bottom: 16px;
 	resize: vertical;
 }
