--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -29,36 +29,9 @@
 	</section>
 
 
-	<script>
-		async function sendEmail() {
-			const name = document.getElementById('name').value;
-			const email = document.getElementById('email').value;
-			const message = document.getElementById('message').value;
-	
-			try {
-				const response = await fetch('/send-email', {
-					method: 'POST',
-					headers: {
-						'Content-Type': 'application/json',
-					},
-					body: JSON.stringify({
-						name,
-						email,
-						message,
-					}),
-				});
-	
-				if (response.ok) {
-					alert('Email sent successfully!');
-				} else {
-					alert('Failed to send email.');
-				}
-			} catch (error) {
-				console.error('Error:', error);
-				alert('An error occurred while sending the email.');
-			}
-		}
-	</script>
+	<div id="toast-container" class="toast-container"></div>
+
+	<script type="text/javascript" src="/contact.js"></script>
 </body>
 
 <%- include('./partials/footer.ejs') %>
