--- a/views/style/search.css
+++ b/views/style/search.css
@@ -4,13 +4,14 @@ body {
 }
 
 
-h3 {
+.shared-container h3 {
 	font-size: 26px;
 	line-height: 32px;
 	color: #fff;
 	font-family: Roboto;
 	font-weight: 600;
 	text-transform: uppercase;
+	margin-top: 70px;
 }
 
 
@@ -79,17 +80,15 @@ h3 {
 
 .search-item {
 	display: flex;
-	/* flex-direction: column; */
-	align-items: center; /* Centers the cart in the container */
-	flex-wrap: wrap; /* Wrap items for smaller screens */
 	align-items: center;
-	justify-content: center; /* Centers horizontally */
-	margin: 0 auto; /* Automatically centers horizontally */
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
 
 	padding: 20px;
 	gap: 20px;
 	margin-bottom: 15px;
-	/* margin-left: 20%; */
 	border-bottom: 1px solid #ddd;
 	padding-bottom: 10px;
 	max-width: 1000px;
@@ -168,18 +167,6 @@ h3 {
 	font-weight: bold;
 	color: #fff;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
