Update: nav working

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -32,7 +32,6 @@
 
 		<a href="/search">
 			<img class="enh_search" src="/pictures/magnif-glass.png" alt="BudgetBuddy" style="width:70px;margin-top: 10px;">
-			<!-- <span class="search-count"><%= session.compare %></span> -->
 		</a>
 
 		<!-- Dynamic Sign In/Sign Up or Profile Icon -->
@@ -79,8 +78,4 @@
 	</div>
 </header>
 
-<script>
-
-		
-		console.log(session.compare);
-</script>
+<script type="text/javascript" src="/nav_search.js"></script>
